[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Room1.bmp" type="Texture" id=1]
[ext_resource path="res://src/actors/Dog.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Untitled.bmp" type="Texture" id=4]
[ext_resource path="res://src/levels/room2.gd" type="Script" id=5]
[ext_resource path="res://src/userinterface/pausescreen.tscn" type="PackedScene" id=6]

[sub_resource type="TileSet" id=1]
0/name = "Untitled.bmp 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="UserInterface" type="CanvasLayer" parent="."]
layer = 100

[node name="Control" parent="UserInterface" instance=ExtResource( 6 )]

[node name="Button" type="Button" parent="UserInterface"]
visible = false
margin_left = 115.0
margin_top = 30.0
margin_right = 211.0
margin_bottom = 67.0
text = "Feed and pet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 220, 171 )
z_index = 1

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 70, 197 )
z_index = 2

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 240.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -37.0
margin_right = 97.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="TextureRect/ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 190.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0 )
z_index = -3
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 393215, 0, 0, 327690, 0, 0, 327700, 0, 0, 458751, 0, 0, 393226, 0, 0, 393240, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 182, 168, 160, 150, 140, 189, 144, 225, 295, 225, 296, 150, 262, 154, 254, 200, 180, 197 )
[connection signal="button_up" from="UserInterface/Button" to="." method="_on_Button_button_up"]
[connection signal="body_entered" from="Area2D" to="." method="_on_feed_area_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_feed_area_body_exited"]
